fix: tweak padding a bit so it doesn't overflow past h2 boundary on topic title

--- a/static/style.less
+++ b/static/style.less
@@ -10,7 +10,7 @@
 
 .unanswered, .answered {
 	font-size: 10px;
-	padding: 4px 8px;
+	padding: 3px 6px;
 	vertical-align: text-bottom;
 	font-weight: 700;
 }
